--- a/index.html
+++ b/index.html
@@ -269,7 +269,10 @@
             </div>
             <div id="location">
                 <h5>¿DONDE ESTAMOS?</h5>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50668.31624481878!2d-72.387509101895!3d-37.466157606894264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x966bdd4669523657%3A0x8318f6229d680877!2zTG9zIEFuZ2VsZXMsIELDrW8gQsOtbw!5e0!3m2!1ses!2scl!4v1675892376995!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50668.31624481878!2d-72.387509101895!3d-37.466157606894264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x966bdd4669523657%3A0x8318f6229d680877!2zTG9zIEFuZ2VsZXMsIELDrW8gQsOtbw!5e0!3m2!1ses!2scl!4v1675892376995!5m2!1ses!2scl"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </iframe>
             </div>
             <div Id="INFO">
@@ -297,7 +300,7 @@
                     </a>
                 </P>
                 <h5>AUTOR</h5>
-                    <p>&copy; Jorge Villablanca Mouesca, JVM.com</p>
+                <p>&copy; Jorge Villablanca Mouesca, JVM.com</p>
 
             </div>
         </div>
